--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://unpkg.com/@salesforce-ux/design-system@^2.1.3/assets/styles/salesforce-lightning-design-system.min.css">
   <link rel="stylesheet" href="./assets/handsontable.full.css">
 
+  <script src="//handsontable.com/dist/handsontable.full.js"></script>
+  <link rel="stylesheet" media="screen" href="//handsontable.com/dist/handsontable.full.css">
+
 </head>
 <body>
   <app-root></app-root>
