Added chart component

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
   <script src="//handsontable.com/dist/handsontable.full.js"></script>
   <link rel="stylesheet" media="screen" href="//handsontable.com/dist/handsontable.full.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
