--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.js"></script>
   <link rel="stylesheet" media="screen" href="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.css">
 
-  <script src="https://npmcdn.com/stats-analysis"></script>
+  <script src="https://use.fontawesome.com/9eab08b384.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
 
