--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
   <link rel="stylesheet" media="screen" href="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.css">
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
-
+  
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  
 </head>
 <body>
   <app-root></app-root>
