--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,24 @@
   <!--
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   -->
-  
-  <link rel="stylesheet" href="https://unpkg.com/@salesforce-ux/design-system@^2.1.3/assets/styles/salesforce-lightning-design-system.min.css">
+
+  <link rel="stylesheet"
+        href="https://unpkg.com/@salesforce-ux/design-system@^2.1.3/assets/styles/salesforce-lightning-design-system.min.css">
 
   <!--
   <script src="//handsontable.com/dist/handsontable.full.js"></script>
   <link rel="stylesheet" media="screen" href="//handsontable.com/dist/handsontable.full.css">
 -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.js"></script>
-  <link rel="stylesheet" media="screen" href="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.css">
-  
+  <link rel="stylesheet" media="screen"
+        href="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.css">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
-  
+
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  
+
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
