--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Visual Data Profiling</title>
@@ -7,27 +8,20 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!--
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  -->
 
-  <link rel="stylesheet"
-        href="https://unpkg.com/@salesforce-ux/design-system@^2.1.3/assets/styles/salesforce-lightning-design-system.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/@salesforce-ux/design-system@^2.1.3/assets/styles/salesforce-lightning-design-system.min.css">
 
-  <!--
   <script src="//handsontable.com/dist/handsontable.full.js"></script>
   <link rel="stylesheet" media="screen" href="//handsontable.com/dist/handsontable.full.css">
--->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.js"></script>
-  <link rel="stylesheet" media="screen"
-        href="//cdnjs.cloudflare.com/ajax/libs/handsontable/0.30.1/handsontable.full.css">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
 
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 </head>
+
 <body>
-<app-root></app-root>
+  <app-root></app-root>
 </body>
+
 </html>
