--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Visual Data Profiling</title>
+  <title>Grafterizer Prototype</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="datagraft.ico">
 
   <link rel="stylesheet" href="https://unpkg.com/@salesforce-ux/design-system@^2.1.3/assets/styles/salesforce-lightning-design-system.min.css">
 
